--- a/package.json
+++ b/package.json
@@ -18,8 +18,10 @@
   },
   "devDependencies": {
     "@babel/core": "^7.12.9",
+    "@trivago/prettier-plugin-sort-imports": "^4.0.0",
     "@types/react": "~18.0.14",
     "@types/react-native": "~0.70.6",
+    "prettier": "^2.8.1",
     "typescript": "^4.6.3"
   },
   "private": true
